--- a/package.json
+++ b/package.json
@@ -6,14 +6,32 @@
   "scripts": {
     "dev": "vite --open",
     "build": "vue-tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "lint": "eslint src",
+    "fix": "eslint src --fix",
+    "prepare": "husky install",
+    "commitlint": "commitlint --config commitlint.config.cjs -e -V"
   },
   "dependencies": {
     "vue": "^3.4.19"
   },
   "devDependencies": {
+    "@babel/eslint-parser": "^7.25.7",
+    "@commitlint/cli": "^19.5.0",
+    "@commitlint/config-conventional": "^19.5.0",
+    "@eslint/js": "^9.12.0",
     "@vitejs/plugin-vue": "^5.0.4",
+    "eslint": "^9.12.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-import": "^2.31.0",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-prettier": "^5.2.1",
+    "eslint-plugin-vue": "^9.28.0",
+    "globals": "^15.10.0",
+    "husky": "^8.0.0",
+    "prettier": "^3.3.3",
     "typescript": "^5.2.2",
+    "typescript-eslint": "^8.8.1",
     "vite": "^5.1.4",
     "vue-tsc": "^1.8.27"
   }
