--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   "scripts": {
     "dev": "vite --open",
     "build": "vue-tsc && vite build",
+    "build:test": "vue-tsc && vite build --mode test",
+    "build:pro": "vue-tsc && vite build --mode production",
     "preview": "vite preview",
     "lint": "eslint src",
     "fix": "eslint src --fix",
@@ -13,6 +15,9 @@
     "commitlint": "commitlint --config commitlint.config.cjs -e -V"
   },
   "dependencies": {
+    "@element-plus/icons-vue": "^2.3.1",
+    "axios": "^1.7.7",
+    "element-plus": "^2.8.5",
     "vue": "^3.4.19"
   },
   "devDependencies": {
@@ -27,12 +32,20 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^5.2.1",
     "eslint-plugin-vue": "^9.28.0",
+    "fast-glob": "^3.3.2",
     "globals": "^15.10.0",
     "husky": "^8.0.0",
+    "mockjs": "^1.1.0",
     "prettier": "^3.3.3",
+    "sass-embedded": "^1.79.5",
     "typescript": "^5.2.2",
     "typescript-eslint": "^8.8.1",
     "vite": "^5.1.4",
+    "vite-plugin-mock": "^3.0.2",
+    "vite-plugin-svg-icons": "^2.0.1",
     "vue-tsc": "^1.8.27"
+  },
+  "rules": {
+    "vue/multi-word-component-names": "off"
   }
 }
