--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "@element-plus/icons-vue": "^2.3.1",
     "axios": "^1.7.7",
     "element-plus": "^2.8.5",
-    "vue": "^3.4.19"
+    "vue": "^3.4.19",
+    "vue-router": "^4.4.5"
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.25.7",
