--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@element-plus/icons-vue": "^2.3.1",
     "axios": "^1.7.7",
     "element-plus": "^2.8.5",
+    "pinia": "^2.0.34",
     "vue": "^3.4.19",
     "vue-router": "^4.4.5"
   },
